--- a/front/.gitignore
+++ b/front/.gitignore
@@ -23,3 +23,105 @@ build.zip
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+front/android/app/src/main/AndroidManifest.xml
+front/android/app/src/main/res/drawable/splash.png
+.gitignore
+front/android/app/src/main/AndroidManifest.xml
+front/android/app/src/main/res/drawable/splash.png
+front/android/app/src/main/res/drawable-land-hdpi/splash.png
+front/android/app/src/main/res/drawable-land-xxxhdpi/splash.png
+front/android/app/src/main/res/drawable-land-xhdpi/splash.png
+front/android/app/src/main/res/drawable-land-night-mdpi/splash.png
+front/android/app/src/main/res/drawable-land-night-hdpi/splash.png
+front/android/app/src/main/res/drawable-land-xhdpi/splash.png
+front/android/app/src/main/AndroidManifest.xml
+front/android/app/src/main/res/drawable/splash.png
+front/android/app/src/main/AndroidManifest.xml
+front/android/app/src/main/res/drawable-land-night-mdpi/splash.png
+front/android/app/src/main/res/drawable-land-night-mdpi/splash.png
+front/android/app/src/main/res/drawable-land-night-mdpi/splash.png
+front/android/app/src/main/res/drawable-land-night-ldpi/splash.png
+front/android/app/src/main/res/drawable-land-mdpi/splash.png
+front/android/app/src/main/res/drawable-land-ldpi/splash.png
+front/android/app/src/main/AndroidManifest.xml
+front/android/app/src/main/AndroidManifest.xml
+front/android/app/src/main/res/drawable/splash.png
+front/android/app/src/main/res/drawable-land-night-mdpi/splash.png
+front/android/app/src/main/res/drawable-land-mdpi/splash.png
+front/android/app/src/main/AndroidManifest.xml
+front/android/app/src/main/res/drawable/splash.png
+front/android/app/src/main/res/drawable-land-hdpi/splash.png
+front/android/app/src/main/res/drawable-land-ldpi/splash.png
+front/android/app/src/main/res/drawable-land-mdpi/splash.png
+front/android/app/src/main/res/drawable-land-night-hdpi/splash.png
+front/android/app/src/main/res/drawable-land-night-ldpi/splash.png
+front/android/app/src/main/res/drawable-land-night-mdpi/splash.png
+front/android/app/src/main/res/drawable-land-night-xhdpi/splash.png
+front/android/app/src/main/res/drawable-land-night-xxhdpi/splash.png
+front/android/app/src/main/res/drawable-land-night-xxxhdpi/splash.png
+front/android/app/src/main/res/drawable-land-xhdpi/splash.png
+front/android/app/src/main/res/drawable-land-xxhdpi/splash.png
+front/android/app/src/main/res/drawable-land-xxxhdpi/splash.png
+front/android/app/src/main/res/mipmap-anydpi-v26/ic_launcher_round.xml
+front/android/app/src/main/res/mipmap-anydpi-v26/ic_launcher.xml
+front/android/app/src/main/AndroidManifest.xml
+front/android/app/src/main/AndroidManifest.xml
+front/android/app/src/main/AndroidManifest.xml
+front/android/app/src/main/res/drawable/splash.png
+front/android/app/src/main/res/drawable-land-hdpi/splash.png
+front/android/app/src/main/res/drawable-land-night-hdpi/splash.png
+front/android/app/src/main/res/drawable-land-xhdpi/splash.png
+front/android/app/src/main/AndroidManifest.xml
+front/android/app/src/main/res/drawable/splash.png
+front/android/app/src/main/res/drawable-land-hdpi/splash.png
+front/android/app/src/main/res/drawable-land-ldpi/splash.png
+front/android/app/src/main/res/drawable-land-mdpi/splash.png
+front/android/app/src/main/res/drawable-land-night-hdpi/splash.png
+front/android/app/src/main/res/drawable-land-night-ldpi/splash.png
+front/android/app/src/main/res/drawable-land-night-mdpi/splash.png
+front/android/app/src/main/res/drawable-land-night-xhdpi/splash.png
+front/android/app/src/main/res/drawable-land-night-xxhdpi/splash.png
+front/android/app/src/main/res/drawable-land-night-xxxhdpi/splash.png
+front/android/app/src/main/res/drawable-land-xhdpi/splash.png
+front/android/app/src/main/res/drawable-land-xxhdpi/splash.png
+front/android/app/src/main/res/drawable-land-xxxhdpi/splash.png
+front/android/app/src/main/res/drawable-night/splash.png
+front/android/app/src/main/res/drawable-port-hdpi/splash.png
+front/android/app/src/main/res/drawable-port-ldpi/splash.png
+front/android/app/src/main/res/drawable-port-mdpi/splash.png
+front/android/app/src/main/res/drawable-port-night-hdpi/splash.png
+front/android/app/src/main/res/drawable-port-night-ldpi/splash.png
+front/android/app/src/main/res/drawable-port-night-mdpi/splash.png
+front/android/app/src/main/res/drawable-port-night-xhdpi/splash.png
+front/android/app/src/main/res/drawable-port-night-xxhdpi/splash.png
+front/android/app/src/main/res/drawable-port-night-xxxhdpi/splash.png
+front/android/app/src/main/res/drawable-port-xhdpi/splash.png
+front/android/app/src/main/res/drawable-port-xxhdpi/splash.png
+front/android/app/src/main/res/drawable-port-xxxhdpi/splash.png
+front/android/app/src/main/res/mipmap-anydpi-v26/ic_launcher_round.xml
+front/android/app/src/main/res/mipmap-anydpi-v26/ic_launcher.xml
+front/android/app/src/main/res/mipmap-hdpi/ic_launcher_background.png
+front/android/app/src/main/res/mipmap-hdpi/ic_launcher_foreground.png
+front/android/app/src/main/res/mipmap-hdpi/ic_launcher_round.png
+front/android/app/src/main/res/mipmap-hdpi/ic_launcher.png
+front/android/app/src/main/res/mipmap-ldpi/ic_launcher_background.png
+front/android/app/src/main/res/mipmap-ldpi/ic_launcher_foreground.png
+front/android/app/src/main/res/mipmap-ldpi/ic_launcher_round.png
+front/android/app/src/main/res/mipmap-ldpi/ic_launcher.png
+front/android/app/src/main/res/mipmap-mdpi/ic_launcher_background.png
+front/android/app/src/main/res/mipmap-mdpi/ic_launcher_foreground.png
+front/android/app/src/main/res/mipmap-mdpi/ic_launcher_round.png
+front/android/app/src/main/res/mipmap-mdpi/ic_launcher.png
+front/android/app/src/main/res/mipmap-xhdpi/ic_launcher_background.png
+front/android/app/src/main/res/mipmap-xhdpi/ic_launcher_foreground.png
+front/android/app/src/main/res/mipmap-xhdpi/ic_launcher_round.png
+front/android/app/src/main/res/mipmap-xhdpi/ic_launcher.png
+front/android/app/src/main/res/mipmap-xxhdpi/ic_launcher_background.png
+front/android/app/src/main/res/mipmap-xxhdpi/ic_launcher_foreground.png
+front/android/app/src/main/res/mipmap-xxhdpi/ic_launcher_round.png
+front/android/app/src/main/res/mipmap-xxhdpi/ic_launcher.png
+front/android/app/src/main/res/mipmap-xxxhdpi/ic_launcher_background.png
+front/android/app/src/main/res/mipmap-xxxhdpi/ic_launcher_foreground.png
+front/android/app/src/main/res/mipmap-xxxhdpi/ic_launcher_round.png
+front/android/app/src/main/res/mipmap-xxxhdpi/ic_launcher.png
+front/public/manifest.json
