--- a/front/package.json
+++ b/front/package.json
@@ -26,11 +26,14 @@
     "capacitor-voice-recorder": "^5.0.0",
     "classnames": "^2.3.2",
     "cordova-plugin-fullscreen": "^1.3.0",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "onsenui": "^2.12.8",
     "parse": "^4.2.0",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.3",
     "react-onsenui": "^1.13.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
