--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,8 @@
     "@types/react-dom": "^18.2.7",
     "axios": "^1.5.0",
     "capacitor-voice-recorder": "^5.0.0",
+    "chart.js": "^4.4.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "classnames": "^2.3.2",
     "cordova-plugin-fullscreen": "^1.3.0",
     "moment": "^2.29.4",
@@ -31,6 +33,7 @@
     "onsenui": "^2.12.8",
     "parse": "^4.2.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-moment": "^1.1.3",
