--- a/front/package.json
+++ b/front/package.json
@@ -36,6 +36,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-moment": "^1.1.3",
     "react-onsenui": "^1.13.3",
     "react-redux": "^8.1.2",
