changed name in titles

--- a/front/android/app/src/assets/capacitor.config.json
+++ b/front/android/app/src/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
 	"appId": "io.ionic.collabothon",
-	"appName": "collabothon",
+	"appName": "Słonikowy świat",
 	"bundledWebRuntime": false,
 	"npmClient": "npm",
 	"webDir": "build",
